# jaraco.windows

./: .flake8  .hgignore  .hgtags  .travis.yml  CHANGES  CHANGES.rst  CHANGES.txt  Dockerfile  NEWS.rst  README  README.rst  README.txt  certutil.py  conftest.py  mypy.ini  pypi_fix.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: main.yml
bugs/: environ-api-wierdness.py  find_target_path.py  multi_os_libc.py  vista-symlink-islink-bug.py  wnetaddconnection2-error-on-64-bit.py
docs/: conf.py  index.rst  index.txt
incubator/: replace-file.py  trace-symlink.py
jaraco/: __init__.py
jaraco/windows/: __init__.py  batch.py  clipboard.py  constants.py  cred.py  dpapi.py  environ.py  error.py  eventlog.py  filesystem.py  inet.py  lib.py  memory.py  message.py  mmap.py  msie.py  msvc.py  net.py  office.py  power.py  privilege.py  registry.py  reparse.py  securit.py  security.py  services.py  shell.py  tempfile.py  timers.py  timezone.py  ui.py  user.py  util.py  vpn.py  xmouse.py
jaraco/windows/api/: console.py  constants.py  credential.py  errors.py  event.py  filesystem.py  inet.py  memory.py  message.py  security.py  shell.py  user.py
jaraco/windows/bugs/: environ-api-weirdness.py  multi_os_libc.py  vista-symlink-islink-bug.py  wnetaddconnection2-error-on-64-bit.py
jaraco/windows/compat/: py310.py
jaraco/windows/filesystem/: __init__.py  backports.py  change.py
jaraco/windows/gui/: test.py
jaraco/windows/incubator/: replace-file.py  trace-symlink.py
newsfragments/: 24.bugfix.rst  30.feature.rst  5650.feature.rst
scripts/: watch-changes.py
tests/: test_clipboard.py  test_filesystem.py  test_mmap.py  test_root.py  test_security.py
