[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.windows
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Windows Routines by Jason R. Coombs
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.windows
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Operating System :: Microsoft :: Windows

[options]
packages = find:
namespace_packages = jaraco
include_package_data = true
python_requires = >=2.7
install_requires =
	more_itertools
	six
	jaraco.ui
	jaraco.collections
	jaraco.text
	jaraco.structures>=1.1.1
	path.py>=6.2
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	xmouse = jaraco.windows.xmouse:Command.invoke
	mklink = jaraco.windows.filesystem:mklink
	find-symlinks = jaraco.windows.filesystem:find_symlinks_cmd
	enver = jaraco.windows.environ:enver
	pclip = jaraco.windows.clipboard:paste_stdout
	gclip = jaraco.windows.clipboard:stdin_copy

[sdist]
formats=zip
