[metadata]
license_file = LICENSE
name = jaraco.windows
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Windows Routines by Jason R. Coombs
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.windows
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	more_itertools
	six
	jaraco.ui
	jaraco.collections
	jaraco.text
	jaraco.structures>=1.1.1
	path.py>=6.2
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	xmouse = jaraco.windows.xmouse:Command.invoke
	mklink = jaraco.windows.filesystem:mklink
	find-symlinks = jaraco.windows.filesystem:find_symlinks_cmd
	enver = jaraco.windows.environ:enver
	pclip = jaraco.windows.clipboard:paste_stdout
	gclip = jaraco.windows.clipboard:stdin_copy

[sdist]
formats=zip
