[metadata]
name = jaraco.windows
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Windows Routines by Jason R. Coombs
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.windows
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Operating System :: Microsoft :: Windows

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	more_itertools
	jaraco.ui
	jaraco.collections
	jaraco.text
	jaraco.structures>=1.1.1
	path

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	xmouse = jaraco.windows.xmouse:Command.invoke
	mklink = jaraco.windows.filesystem:mklink
	find-symlinks = jaraco.windows.filesystem:find_symlinks_cmd
	enver = jaraco.windows.environ:enver
	pclip = jaraco.windows.clipboard:paste_stdout
	gclip = jaraco.windows.clipboard:stdin_copy

[sdist]
formats=zip
